<resources>
    <string name="app_name">Family Recipes dev</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Recipes</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_share">Share</string>
    <string name="action_share_as_image">Share as image</string>
    <string name="action_keep_screen_on">Keep Screen On</string>
    <string name="action_add_photo">Add Photo</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort_toggle">Sort By</string>
    <string name="action_help">Help</string>
    <string name="search_hint">Type name…</string>
    <string name="Menu">Menu</string>
    <string name="activity_password_forgot_your_password">Forgot your password?</string>
    <string name="activity_password_check_code_info">Set your new password with the verification code that was sent to you</string>
    <string name="activity_password_verification_code">Verification code</string>
    <string name="activity_password_set_password">Set password</string>
    <string name="activity_password_complete_to_continue">Complete the following to continue</string>
    <string name="activity_password_new_password">New password</string>
    <string name="activity_password_continue">Continue</string>
    <string name="sort_action_recent">Recent</string>
    <string name="sort_action_popular">Popular</string>
    <string name="sort_action_recent_modified">Last Modified</string>
    <string name="recipe_has_no_images_message">Recipe has no images</string>
    <string name="search_submit_message">Results for %1$s</string>
    <string name="recycler_item_name">A recipe</string>
    <string name="recycler_item_description">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="recycler_item_author">author</string>
    <string name="recycler_item_number_of_likes">12</string>
    <string name="sort_toggle_text_on">recent</string>
    <string name="sort_toggle_text_off">popular</string>
    <string name="title_activity_recipe">Loading…</string>
    <string name="title_activity_create_recipe">Create Recipe</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="support_email" translatable="false">familyrecipes.supp0rt@gmail.com</string>
    <string name="nav_main_other">Others</string>
    <string name="nav_main_post_recipe">New Recipe</string>
    <string name="nav_main_all_recipes">All recipes</string>
    <string name="nav_main_favorites">Favorites</string>
    <string name="nav_main_settings">Settings</string>
    <string name="nav_main_sign_out">Sign out</string>
    <string name="nav_main_about">About</string>
    <string name="app_main_screen_title">Family Recipes</string>
    <string name="app_main_desc">A small app to manage our best recipes.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="ok" translatable="false">OK</string>
    <string name="activity_login_sign_in">Sign in</string>
    <string name="activity_login_forgot_password">Forgot password</string>
    <string name="splash_activity_code" translatable="false">splash_code</string>
    <string name="splash_activity_code_main" translatable="false">splash_code_main</string>
    <string name="splash_activity_code_post" translatable="false">splash_code_post</string>
    <string name="splash_activity_code_recipe" translatable="false">splash_code_recipe</string>
    <string name="main_activity_first_fragment" translatable="false">first_fragment</string>
    <string name="main_activity_first_fragment_all" translatable="false">fragment_all</string>
    <string name="main_activity_first_fragment_favorites" translatable="false">fragment_favorites</string>
    <string name="main_activity_posted_new_recipe">thanks for contributing</string>
    <string name="main_activity_app_up_to_date">Up to date!</string>
    <string name="main_activity_update_available_title">New version is available</string>
    <string name="main_activity_update_available_message">Start download?</string>
    <string name="main_activity_permission_to_install_updates_title">Permissions are necessary</string>
    <string name="main_activity_permission_to_install_updates_message">Install from unknown source is the only way to install the app outside of google play</string>
    <string name="post_images_error">error uploading images</string>
    <string name="post_recipe_error">failed to upload </string>
    <string name="change_displayed_name_error">failed to update your nickname</string>
    <string name="str_all_selected">All categories</string>
    <string name="refresh_error_message">Please don\'t refresh frequently</string>
    <string name="load_error_message">error has occurred</string>
    <string name="message_from_fetch_recipes">%1$d added, %2$d modified</string>
    <string name="message_from_fetch_recipes_not_modified">no updates</string>
    <string name="message_from_fetch_categories">added %1$d, modified %2$d categories</string>
    <string name="number_of_recipes_indicator">%1$d recipes</string>
    <string name="error_message_from_fetch_categories">error fetching new categories</string>
    <string name="recipe_content_not_found">recipe content not found</string>
    <string name="recipe_not_in_server">recipe has no content in server</string>
    <string name="no_internet_message">Not connected to the internet</string>
    <string name="post_comment">Send</string>
    <string name="post_comment_error">Can\'t send empty message</string>
    <string name="comments">Comments (%1$d)</string>
    <string name="no_comments">Comments (0)</string>
    <string name="post_comment_hint">Type a message</string>
    <string name="post_comment_succeeded">Message posted successfully</string>
    <string name="alert_dialog_upload_photos_confirmation">Upload Images</string>
    <string name="alert_dialog_upload_photos_cancel">Cancel</string>
    <string name="alert_dialog_upload_photos_finish">Upload %1$d images</string>
    <string name="alert_dialog_upload_photos_take_more">More</string>
    <string name="alert_dialog_upload_photos_max_limit">Can upload up to %1$d images.\nWill upload the first %1$d you chose</string>
    <string name="upload_images_success">Images uploaded successfully!</string>
    <string name="upload_images_failed">Failed to upload images</string>
    <string name="action_key_keep_screen_on" translatable="false">keep_screen_on</string>
    <string name="recipe_share_pre_url">Hey check out this recipe!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="post_recipe_name">Recipe name</string>
    <string name="post_recipe_description">Recipe description</string>
    <string name="post_recipe_next">next</string>
    <string name="post_recipe_finish">finish</string>
    <string name="post_recipe_field_required">Field is required</string>
    <string name="post_recipe_tags_required">must choose at least %1$d categories</string>
    <string name="post_recipe_hint">Type here&#8230;</string>
    <string name="post_recipe_advanced_step_hr">divider</string>
    <string name="post_recipe_advanced_step_bold">Bold</string>
    <string name="post_recipe_advanced_step_under_score">Underscore</string>
    <string name="post_recipe_offline_upload_message">Will upload once connection is established</string>
    <string name="post_recipe_online_upload_message">Uploading the recipe…</string>
    <string name="post_recipe_snacbar_close">Close</string>
    <string name="preference_key_first_post_recipe" translatable="false">first_recipe</string>
    <string name="post_recipe_advanced_step_fab_add">New Block</string>
    <string name="post_recipe_advanced_step_fab_preview">Preview</string>
    <string name="post_recipe_advanced_step_fab_template">Basic Template</string>
    <string name="post_recipe_advanced_step_fab_reset">Reset</string>
    <string name="bottom_transient_bar_behavior" translatable="false">com.ronginat.family_recipes.utils.ui.TransientBarBehavior</string>
    <string name="post_recipe_advanced_step_reset_message">What you wrote will be deleted. Continue?</string>
    <string name="post_recipe_advanced_step_list_message">Press ENTER to separate between items</string>
    <string name="post_recipe_advanced_step_validation_message">Need at least %1$d non empty elements</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_category_general">General</string>
    <string name="preference_key_dark_theme" translatable="false">dark_theme</string>
    <string name="preference_key_language" translatable="false">Locale.Helper.Selected.Language</string>
    <string name="preference_key_report_bug" translatable="false">report_bug</string>
    <string name="preference_key_check_for_updates" translatable="false">app_updates</string>
    <string name="preference_key_preferred_name" translatable="false">nickname</string>
    <string name="preference_key_notification_new_recipe" translatable="false">@string/notification_new_recipe_channel_id</string>
    <string name="preference_key_notification_comment" translatable="false">@string/notification_comment_channel_id</string>
    <string name="preference_key_notification_likes" translatable="false">@string/notification_like_channel_id</string>
    <string name="pref_summary_notification_new_recipe">Get updates on new recipes</string>
    <string name="pref_summary_notification_comment">Get notified when someone comments on your recipes</string>
    <string name="pref_summary_notification_like">Get notified when someone likes your recipes</string>
    <string name="pref_title_notification_new_recipe">@string/notification_new_recipe_channel_name</string>
    <string name="pref_title_notification_comment">@string/notification_comment_channel_name</string>
    <string name="pref_title_notification_like">@string/notification_like_channel_name</string>
    <string name="preference_title_report_bug">Report a Bug</string>
    <string name="preference_title_preferred_name">Change your displayed name</string>
    <string name="preference_title_check_for_updates">Check for updates</string>
    <string name="pref_title_dark_theme">Dark Theme</string>
    <string name="pref_description_dark_theme">Switching to dark theme is recommended by google
        for saving battery life
    </string>
    <string name="pref_title_choose_language">Language</string>
    <string name="pick_image_dialog_camera">Camera</string>
    <string name="pick_image_dialog_gallery">Gallery</string>
    <string name="pick_image_dialog_choose">Choose Method</string>
    <string name="pick_image_dialog_cancel">Cancel</string>
    <string name="shortcut_post_recipe_short_label">New Recipe</string>
    <string name="shortcut_post_recipe_long_label">Post New Recipe</string>
    <string name="shortcut_post_recipe_disabled_message">Can\'t post a recipe</string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
</resources>