<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:title="@string/settings_category_notifications">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="notifications_new_message"
        app:title="@string/pref_title_new_message_notifications"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--<RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:dependency="notifications_new_message"
        app:key="notifications_new_message_vibrate"
        app:title="@string/pref_title_vibrate"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"/>

    <CheckBoxPreference
        app:defaultValue="true"
        app:key="@string/preference_key_notification_new_recipe"
        app:title="@string/pref_title_notification_new_recipe"
        app:summary="@string/pref_summary_notification_new_recipe"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="@string/preference_key_notification_comment"
        app:title="@string/pref_title_notification_comment"
        app:summary="@string/pref_summary_notification_comment"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/preference_key_notification_likes"
        app:title="@string/pref_title_notification_like"
        app:summary="@string/pref_summary_notification_like"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
