<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_display">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_key_dark_mode"
            android:summary="@string/pref_description_dark_theme"
            android:title="@string/pref_title_dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_notifications">

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_general">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
            dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/pref_languages_list_titles"
            android:entryValues="@array/pref_languages_list_values"
            android:key="@string/preference_key_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_choose_language" />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:enabled="false"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


</PreferenceScreen>
