<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_main_all_recipes"
            android:title="@string/nav_main_all_recipes"
            android:icon="@drawable/ic_action_all_recipes_black" />

        <item android:id="@+id/nav_main_favorites"
            android:title="@string/nav_main_favorites"
            android:icon="@drawable/ic_action_favorites_black" />

        <item android:id="@+id/nav_main_post_recipe"
            android:title="@string/nav_main_post_recipe"
            android:icon="@drawable/ic_action_post_black" />

        <item android:id="@+id/nav_main_sub_header"
            android:title="@string/nav_main_other">

            <menu>
                <item android:id="@+id/nav_main_settings"
                    android:title="@string/nav_main_settings"
                    android:icon="@drawable/ic_action_settings_black" />

                <item android:id="@+id/nav_main_about"
                    android:title="@string/nav_main_about"
                    android:icon="@drawable/ic_action_about_black" />

                <item android:id="@+id/nav_main_sign_out"
                    android:title="@string/nav_main_sign_out"
                    android:icon="@drawable/ic_action_sign_out_black" />
            </menu>

        </item>

    </group>
</menu>