<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:title="@string/settings_category_account">


    <EditTextPreference
        android:key="username"
        app:title="@string/Username"
        app:useSimpleSummaryProvider="true"
        app:enabled="false"
        app:iconSpaceReserved="true" />

    <EditTextPreference
        android:key="email"
        app:title="@string/email"
        app:useSimpleSummaryProvider="true"
        app:enabled="false"
        app:iconSpaceReserved="true" />

    <EditTextPreference
        android:key="@string/preference_key_preferred_name"
        app:title="@string/preference_title_preferred_name"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="true" />

</androidx.preference.PreferenceScreen>
