<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myapps.ron.family_recipes.ui.activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
        <!--android:menuCategory="container"-->

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort_toggle"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom|withText" />
        <!--android:menuCategory="alternative"-->

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="never"
        android:title="@string/action_refresh" />

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings" />
</menu>