<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myapps.ron.family_recipes.ui.activities.RecipeActivity">

    <item
        android:id="@+id/action_add_photo"
        android:title="@string/action_add_photo"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_share_expanded_24dp"-->

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
    <!--android:icon="@drawable/ic_share_expanded_24dp"-->

    <item
        android:id="@+id/action_keep_screen_on"
        android:title="@string/action_keep_screen_on"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="false"/>
</menu>
