<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:id="@+id/first_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/pick_image_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/pick_image_dialog_choose"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/buttons_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:minWidth="250dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pick_image_dialog_camera"
                    style="@style/option"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:drawableStart="@drawable/ic_camera"
                    android:drawablePadding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="start|center_vertical"
                    android:text="@string/pick_image_dialog_camera" />

                <TextView
                    android:id="@+id/pick_image_dialog_gallery"
                    style="@style/option"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:drawableStart="@drawable/ic_gallery"
                    android:drawablePadding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="start|center_vertical"
                    android:text="@string/pick_image_dialog_gallery" />

            </LinearLayout>

            <TextView
                android:id="@+id/pick_image_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="10dp"
                android:text="@string/pick_image_dialog_cancel"
                android:textAllCaps="true"
                android:textColor="@color/cancel_selector"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
