<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:id="@+id/row_html_collapsed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone">

        <TextView
            android:id="@+id/row_html_collapsed_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="hidden"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/row_html_expand_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_unfold_more"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_html_expanded_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/attributes_container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/row_html_horizontal_divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_recipe_advanced_step_hr" />

            <Spinner
                android:id="@+id/row_html_choose_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/row_html_collapse_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_unfold_less"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/attributes_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/row_html_bold_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_recipe_advanced_step_bold" />


            <CheckBox
                android:id="@+id/row_html_under_score_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_recipe_advanced_step_under_score" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/row_html_details_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/post_recipe_hint"
            android:inputType="textMultiLine"
            android:lines="4"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textSize="@dimen/edit_text_text_size" />

        <android.widget.Space
            android:id="@+id/row_html_space"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>